fix: improve header slider text alignments

--- a/src/styles/elements/_header-content.css
+++ b/src/styles/elements/_header-content.css
@@ -98,9 +98,12 @@
         --header-content-width: calc(100% - calc(var(--header-content-right) * 2));
     }
 
-    .header-content__title,
-    .header .slider :is(h1, h2, h3, h4, h5) {
+    .header-content__title {
         text-align: var(--header-text-alignment);
+        color: var(--header-title-color) !important;
+    }
+
+    .header .slider :is(h1, h2, h3, h4, h5) {
         color: var(--header-title-color) !important;
     }
 
@@ -109,8 +112,8 @@
         text-align: var(--header-text-alignment);
     }
 
-    .header-content__text:first-child,
-    .header-content > p:first-child {
+    .header > .header__content .header-content__text:first-child,
+    .header > .header__content .header-content > p:first-child {
         margin-top: 0;
     }
 
